implement addToWatchList + remove functions + refactoring